components/card/article/src/index.scss
/* sass-lint:disable no-important, class-name-format*/
@import '~@schibstedspain/theme-basic/lib/index';
@import '~@schibstedspain/sui-image-lazy-load/lib/index';
@import '~@schibstedspain/sui-tag-chip/lib/index';

$c-article-tag-types: () !default;

.sui-CardArticle {
  @include sui-card;

  &-link {
    @include reset-link;
  }

  &-info {
    &.is-featured {
      border-top: $bd-article-featured;
    }

    &Inner {
      align-items: center;
      display: flex;
      justify-content: space-between;
      margin: 0 $m-h;
      padding: $p-v 0;
    }
  }

  &-tag {
    margin-bottom: 0;
  }

  &-comments {
    @include reset-link;
    $c-comments: $c-gray;
    align-items: center;
    color: $c-comments;
    display: flex;
    font-size: $fz-s;

    &Icon {
      $size-icon: 16px;
      fill: $c-comments !important;
      height: $size-icon;
      margin-right: $m-h-xsmall;
      width: $size-icon;
    }
  }
}

